    with ext3" by changing the default to more moderate values. Note, some file
    systems have a hard limit of supported subdirectories (Closes: #682840).
    Ported from our 2.2 tree targeted for Wheezy.
  * Properly check return code of a2query in the apache2_invoke library
    function. This caused reverse dependencies to fail for newly installed
    modules previously.

 -- Arno Töll <arno@debian.org>  Sun, 29 Jul 2012 21:57:38 +0200

apache2 (2.4.2-2) experimental; urgency=low

  [ Stefan Fritsch ]
  * Explicitly enable mod_authz_core on upgrades. It can happen that it is
    not pulled in by any of the enabled modules, but we need it in any case
    for apache2.conf. Closes: #669876
  * Don't ship the changelogs in the apache2-mpm-itk transitional package.

  [ Arno Töll ]
  * Add mode lines to various configuration files and scripts. Reformat
    configuration files for consitency.
  * Fix "Fix typographic errors in configuration file comments": Thanks to Oxan
    van Leeuwen for providing a patch (Closes: #669269)
  * Formulate several clarifications in PACKAGING, start versioning this document
    and add normative read hints. Moreover, document the -m switch for a2enmod.
  * Merge spelling and grammar fixes provided by Justin B Rye. Much appreciated!
  * Change various state and run directories used by Apache from
    /var/run/<basename> to /var/run/apache2/<basename>. This might change again
    for Wheezy+1 to adopt /run.
  * Use more exit status codes for a2query which allows to tell apart why a
    module was disabled, also make its output more readable.
  * Changes in apache2-maintscript-helper:
    + Finally apache2_invoke may  behave correctly and catch all cases
      including upgrades from Squeeze.
    + apache2_invoke: accepts a third argument to override the rc.d-action now
    + support APACHE2_MAINTSCRIPT_DEBUG: When defined in the environment or in
      /etc/apache2/envvars, debug output is displayed.